[gd_scene load_steps=28 format=3 uid="uid://cg8un730jrawc"]

[ext_resource type="Texture2D" uid="uid://b2ftwa60xj37" path="res://mainMenu/Assets/Images/fondo.png" id="1_ovmd5"]
[ext_resource type="Script" uid="uid://cd5rgwlaafwar" path="res://mainMenu/Scripts/options.gd" id="2_iuyon"]
[ext_resource type="Texture2D" uid="uid://dqqnrgy3yai5l" path="res://mainMenu/Assets/Images/marco pequeño.png" id="2_jqmrl"]
[ext_resource type="Texture2D" uid="uid://byim6hlifbw6m" path="res://mainMenu/Assets/Buttoms/regresar_normal.tres" id="3_0kcmf"]
[ext_resource type="Texture2D" uid="uid://cbuqbkoc7cmgy" path="res://mainMenu/Assets/Buttoms/regresar_press.tres" id="4_n0bd4"]
[ext_resource type="Texture2D" uid="uid://5rs8jmdnumd7" path="res://mainMenu/Assets/Buttoms/Mute.tres" id="5_eoehv"]
[ext_resource type="Texture2D" uid="uid://fcbom5dwpmgc" path="res://mainMenu/Assets/Buttoms/unMute.tres" id="6_qkixd"]
[ext_resource type="Script" uid="uid://ditfvc7qwilfq" path="res://mainMenu/Scripts/MuteButton.gd" id="7_x4qrv"]
[ext_resource type="FontFile" uid="uid://cyng0aemdnieu" path="res://assests/Fonts/pixelFont-7-8x14-sproutLands.ttf" id="8_bu0x8"]
[ext_resource type="Texture2D" uid="uid://cdpxi0a00j4ak" path="res://mainMenu/Assets/Buttoms/boton_normal.tres" id="9_5ey7e"]
[ext_resource type="Texture2D" uid="uid://cpwrqewpvsnjl" path="res://mainMenu/Assets/Buttoms/boton_presionado.tres" id="10_okly5"]
[ext_resource type="FontFile" uid="uid://b5b1l3hfn2lof" path="res://assests/Fonts/ShareTech-Regular.ttf" id="11_anp14"]
[ext_resource type="FontFile" uid="uid://biasfq1fvbi0t" path="res://assests/Fonts/Silver.ttf" id="13_dutax"]
[ext_resource type="Texture2D" uid="uid://ojluld7n4a28" path="res://mainMenu/Assets/Buttoms/dalto_icon_ckecked.tres" id="13_uogns"]
[ext_resource type="Texture2D" uid="uid://b6ob7qbr0mdti" path="res://mainMenu/Assets/Buttoms/dalto_icon.tres" id="14_iuyon"]
[ext_resource type="Texture2D" uid="uid://coc6s7alo3f5s" path="res://mainMenu/Assets/Icons/audio-off-icon.png" id="15_hi5nx"]
[ext_resource type="Texture2D" uid="uid://c8c2ft46ql8g6" path="res://mainMenu/Assets/Buttoms/grabber.tres" id="16_e2iw7"]
[ext_resource type="Texture2D" uid="uid://dvl1yl7cfo5lk" path="res://mainMenu/Assets/Buttoms/grabberPressed.tres" id="17_f8ysp"]
[ext_resource type="Texture2D" uid="uid://dkdwymhfbdxju" path="res://mainMenu/Assets/Icons/Sprite sheet for Basic Pack.png" id="18_yvfpj"]
[ext_resource type="Texture2D" uid="uid://c7fbi771wadk3" path="res://mainMenu/Assets/Icons/audio-on-icon.png" id="19_wqgh3"]
[ext_resource type="Texture2D" uid="uid://s423y6mwv0uc" path="res://mainMenu/Assets/Icons/audioOff.png" id="20_joxnd"]
[ext_resource type="Texture2D" uid="uid://cfdn3hxy3d8rl" path="res://mainMenu/Assets/Icons/audioON.png" id="21_gx21r"]
[ext_resource type="Texture2D" uid="uid://chb7wwxgulmux" path="res://mainMenu/Assets/Buttoms/botonCusNormal.tres" id="23_hi5nx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jqmrl"]
texture = ExtResource("1_ovmd5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eliag"]
texture = ExtResource("2_jqmrl")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f26x1"]
bg_color = Color(0.196078, 0.168627, 0.14902, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ynvwu"]
texture = ExtResource("18_yvfpj")
texture_margin_left = 1.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 1.0
region_rect = Rect2(340.748, 5.23068, 38.4508, 5.15953)

[node name="Panel" type="Panel"]
anchors_preset = -1
anchor_left = 0.175
anchor_top = 0.122
anchor_right = 0.815
anchor_bottom = 0.91
offset_left = -112.0
offset_top = -43.92
offset_right = 118.4
offset_bottom = 32.4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_jqmrl")
script = ExtResource("2_iuyon")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = -24.0
offset_right = 552.0
offset_bottom = 416.0
theme_override_styles/panel = SubResource("StyleBoxTexture_eliag")

[node name="MuteButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 599.0
offset_top = 10.0
offset_right = 612.0
offset_bottom = 19.0
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("5_eoehv")
texture_pressed = ExtResource("6_qkixd")
script = ExtResource("7_x4qrv")

[node name="buttom_back" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 602.0
offset_top = 324.0
offset_right = 623.0
offset_bottom = 342.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_0kcmf")
texture_pressed = ExtResource("4_n0bd4")
texture_hover = ExtResource("4_n0bd4")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 80.0
offset_right = 472.0
offset_bottom = 160.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f26x1")

[node name="Panel2" type="Panel" parent="Panel2"]
layout_mode = 0
offset_top = 88.0
offset_right = 304.0
offset_bottom = 152.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f26x1")

[node name="Panel2" type="Panel" parent="Panel2/Panel2"]
layout_mode = 0
offset_top = 72.0
offset_right = 304.0
offset_bottom = 143.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f26x1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 83.0
offset_right = 234.0
offset_bottom = 106.0
theme_override_fonts/font = ExtResource("8_bu0x8")
theme_override_font_sizes/font_size = 21
text = "AUDIO"

[node name="Label" type="Label" parent="Label"]
layout_mode = 0
offset_left = 1.0
offset_top = 88.0
offset_right = 83.0
offset_bottom = 111.0
theme_override_fonts/font = ExtResource("8_bu0x8")
theme_override_font_sizes/font_size = 21
text = "IDIOMAS"

[node name="InglesButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 191.0
offset_right = 384.0
offset_bottom = 207.0
scale = Vector2(2.3, 2.3)
texture_normal = ExtResource("9_5ey7e")
texture_pressed = ExtResource("10_okly5")
texture_hover = ExtResource("10_okly5")

[node name="EspañonButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 208.0
scale = Vector2(2.3, 2.3)
texture_normal = ExtResource("9_5ey7e")
texture_pressed = ExtResource("10_okly5")
texture_hover = ExtResource("10_okly5")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 367.0
offset_top = 195.0
offset_right = 421.0
offset_bottom = 220.208
theme_override_fonts/font = ExtResource("11_anp14")
theme_override_font_sizes/font_size = 22
text = "Inglés"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 229.0
offset_top = 197.0
offset_right = 288.0
offset_bottom = 218.771
theme_override_fonts/font = ExtResource("11_anp14")
theme_override_font_sizes/font_size = 22
text = "Español"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 244.0
offset_right = 328.0
offset_bottom = 268.063
theme_override_fonts/font = ExtResource("8_bu0x8")
theme_override_font_sizes/font_size = 21
text = "ACCESIBILIDAD"

[node name="CheckButton" type="CheckButton" parent="."]
visible = false
layout_mode = 0
offset_left = 335.0
offset_top = 258.0
offset_right = 377.0
offset_bottom = 287.0
scale = Vector2(1.5, 1.5)
focus_mode = 1
theme_override_icons/checked = ExtResource("13_uogns")
theme_override_icons/unchecked = ExtResource("14_iuyon")

[node name="Sound_bar" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 94.0
offset_right = 290.0
offset_bottom = 119.0

[node name="Control" type="Control" parent="Sound_bar"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sound_bar/Control"]
layout_mode = 0
offset_left = 6.0
offset_top = -2.0
offset_right = 202.0
offset_bottom = 22.0

[node name="VolumeBar" type="HBoxContainer" parent="Sound_bar/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Sound_bar/Control/VBoxContainer/VolumeBar"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="Control" type="Control" parent="Sound_bar/Control/VBoxContainer/VolumeBar/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Sound_bar/Control/VBoxContainer/VolumeBar/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_hi5nx")

[node name="sfxSlider" type="HSlider" parent="Sound_bar/Control/VBoxContainer/VolumeBar"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
theme_override_icons/grabber = ExtResource("16_e2iw7")
theme_override_icons/grabber_highlight = ExtResource("17_f8ysp")
theme_override_styles/slider = SubResource("StyleBoxTexture_ynvwu")
max_value = 1.0
step = 0.001
value = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Sound_bar/Control/VBoxContainer/VolumeBar"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="Control" type="Control" parent="Sound_bar/Control/VBoxContainer/VolumeBar/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Sound_bar/Control/VBoxContainer/VolumeBar/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("19_wqgh3")

[node name="muisc_bar" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 94.0
offset_right = 290.0
offset_bottom = 119.0

[node name="Control" type="Control" parent="muisc_bar"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="muisc_bar/Control"]
layout_mode = 0
offset_left = 5.0
offset_top = 31.0
offset_right = 201.0
offset_bottom = 55.0

[node name="VolumeBar" type="HBoxContainer" parent="muisc_bar/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="VBoxContainer" type="VBoxContainer" parent="muisc_bar/Control/VBoxContainer/VolumeBar"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="Control" type="Control" parent="muisc_bar/Control/VBoxContainer/VolumeBar/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="muisc_bar/Control/VBoxContainer/VolumeBar/VBoxContainer"]
layout_mode = 2
texture = ExtResource("20_joxnd")

[node name="musicSlider" type="HSlider" parent="muisc_bar/Control/VBoxContainer/VolumeBar"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
theme_override_icons/grabber = ExtResource("16_e2iw7")
theme_override_icons/grabber_highlight = ExtResource("17_f8ysp")
theme_override_styles/slider = SubResource("StyleBoxTexture_ynvwu")
max_value = 1.0
step = 0.001
value = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="muisc_bar/Control/VBoxContainer/VolumeBar"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="Control" type="Control" parent="muisc_bar/Control/VBoxContainer/VolumeBar/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="muisc_bar/Control/VBoxContainer/VolumeBar/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("21_gx21r")

[node name="OptionButton" type="OptionButton" parent="."]
top_level = true
layout_mode = 0
offset_left = 300.0
offset_top = 264.0
offset_right = 462.0
offset_bottom = 295.0
theme_override_icons/arrow = ExtResource("23_hi5nx")
item_count = 9
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "Protanomalía"
popup/item_1/id = 1
popup/item_2/text = "Deuteranomalía"
popup/item_2/id = 2
popup/item_3/text = "Tritanomalía"
popup/item_3/id = 3
popup/item_4/text = "Protanopia "
popup/item_4/id = 4
popup/item_5/text = "Deuteranopia"
popup/item_5/id = 5
popup/item_6/text = "Tritanopia"
popup/item_6/id = 6
popup/item_7/text = "Acromatopsia"
popup/item_7/id = 7
popup/item_8/text = "BCM"
popup/item_8/id = 8

[node name="Label5" type="Label" parent="OptionButton"]
layout_mode = 0
offset_left = -121.0
offset_top = 6.0
offset_right = 8.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("13_dutax")
theme_override_font_sizes/font_size = 24
text = "Filtro daltónicos"

[connection signal="pressed" from="buttom_back" to="." method="_on_buttom_back_pressed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="value_changed" from="Sound_bar/Control/VBoxContainer/VolumeBar/sfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="muisc_bar/Control/VBoxContainer/VolumeBar/musicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
